--- a/events.html
+++ b/events.html
@@ -129,47 +129,103 @@
     <section class="container">
         <ul class="breadcrumb">
             <li><a href="#">Главная</a> /&nbsp;</li>
-            <li><a href="#">О компании</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Заголовок новости</a></li>
         </ul>
-        <h1 class="pages-title">Контакты</h1>
-        <div class="contacts-item-page">
-            <span><a href="tel:+74712360137"><i class="fa-solid fa-mobile-screen-button"></i> +7 (4712)
-                    36-01-37</a></span>
-            <span><a href="mailto:office@gk-agrobusiness.ru"><i class="fa-regular fa-envelope"></i>
-                    office@gk-agrobusiness.ru</a></span>
+        <h1 class="pages-title">Заголовок новости</h1>
+        <div class="news-image-item">
+            <img alt="" src="images/big-banner.png">
         </div>
-        <h2>Реквизиты</h2>
-        <div class="contacts-table">
-            <div class="contacts-item-flex">
-                <div>Наименование организации:</div>
-                <div>ООО «ГК  АГРОБИЗНЕС»</div>
-            </div>
-            <div class="contacts-item-flex">
-                <div>Адрес:</div>
-                <div>307030, Курская область, р-н Медвенский, пгт. Медвенка,  ул. Промышленная,  здание 25, офис 12
+        <div class="news-body">
+            <p>Значимость этих проблем настолько очевидна, что глубокий уровень погружения создаёт необходимость
+                включения в производственный план целого ряда внеочередных мероприятий с учётом комплекса поэтапного и
+                последовательного развития общества. А ещё сторонники тоталитаризма в науке ограничены исключительно
+                образом мышления. Учитывая ключевые сценарии поведения, выбранный нами инновационный путь не даёт нам
+                иного выбора, кроме определения благоприятных перспектив. Внезапно, сторонники тоталитаризма в науке
+                подвергнуты целой серии независимых исследований.</p>
+
+            <p>С учётом сложившейся международной обстановки, постоянный количественный рост и сфера нашей активности
+                прекрасно подходит для реализации благоприятных перспектив. Задача организации, в особенности же
+                понимание сути ресурсосберегающих технологий предопределяет высокую востребованность благоприятных
+                перспектив. В частности, высокотехнологичная концепция общественного уклада предполагает независимые
+                способы реализации модели развития! Наше дело не так однозначно, как может показаться:
+                высококачественный прототип будущего проекта в значительной степени обусловливает важность кластеризации
+                усилий. Наше дело не так однозначно, как может показаться: понимание сути ресурсосберегающих технологий
+                способствует подготовке и реализации стандартных подходов.</p>
+        </div>
+        <div class="pagination-buttons text-center">
+            <a href="#" class="main-page-btn btn-left-pagination"><i class="fa fa-angle-left"></i><span>Назад к
+                    новостям</span></a>
+        </div>
+        <div class="news-block-title">
+            Это может быть интересно:
+        </div>
+        <div class="interesting-more-news">
+            <div class="news-block-flex">
+                <div class="news-block-img">
+                    <a href="#"><img alt="" src="images/advantages1.png"></a>
+                </div>
+                <div class="news-block-info">
+                    <div class="news-block-date">
+                        10 декабря 2023
+                    </div>
+                    <div class="news-block-title">
+                        <a href="#">Заголовок новости</a>
+                    </div>
+                    <div class="news-block-subtitle">
+                        Краткий анонс новости
+                    </div>
                 </div>
             </div>
-            <div class="contacts-item-flex">
-                <div>ИНН/КПП:</div>
-                <div>4615007375/460401001</div>
+            <div class="news-block-flex">
+                <div class="news-block-img">
+                    <a href="#"><img alt="" src="images/advantages4.png"></a>
+                </div>
+                <div class="news-block-info">
+                    <div class="news-block-date">
+                        18 декабря 2023
+                    </div>
+                    <div class="news-block-title">
+                        <a href="#">Заголовок новости</a>
+                    </div>
+                    <div class="news-block-subtitle">
+                        Краткий анонс новости
+                    </div>
+                </div>
             </div>
-            <div class="contacts-item-flex">
-                <div>ОГРН:</div>
-                <div>1164632065982</div>
+            <div class="news-block-flex">
+                <div class="news-block-img">
+                    <a href="#"><img alt="" src="images/advantages2.png"></a>
+                </div>
+                <div class="news-block-info">
+                    <div class="news-block-date">
+                        29 декабря 2023
+                    </div>
+                    <div class="news-block-title">
+                        <a href="#">Заголовок новости</a>
+                    </div>
+                    <div class="news-block-subtitle">
+                        Краткий анонс новости
+                    </div>
+                </div>
             </div>
-            <div class="contacts-item-flex">
-                <div>Расчетный счет:</div>
-                <div>40702810133000006319 в КУРСКОЕ
-                    ОТДЕЛЕНИЕ N8596 ПАО СБЕРБАНК
-                    БИК 043807606 к/с 30101810300000000606</div>
-            </div>
-            <div class="contacts-item-flex">
-                <div>Директор:</div>
-                <div>Митин Сергей Николаевич</div>
+            <div class="news-block-flex">
+                <div class="news-block-img">
+                    <a href="#"><img alt="" src="images/advantages3.png"></a>
+                </div>
+                <div class="news-block-info">
+                    <div class="news-block-date">
+                        10 февраля 2024
+                    </div>
+                    <div class="news-block-title">
+                        <a href="#">Заголовок новости</a>
+                    </div>
+                    <div class="news-block-subtitle">
+                        Краткий анонс новости
+                    </div>
+                </div>
             </div>
         </div>
-
-
     </section>
 
     <section class="background-image-main questions-form">
