--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                     <span class="pages__href">reports.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="news.html" target="_blank">
                     <span class="pages__name">Новости</span>
                     <span class="pages__href">news.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="events.html" target="_blank">
                     <span class="pages__name">Отдельная новость</span>
                     <span class="pages__href">events.html</span>
