--- a/card2.html
+++ b/card2.html
@@ -129,180 +129,111 @@
     <section class="container">
         <ul class="breadcrumb">
             <li><a href="#">Главная</a> /&nbsp;</li>
-            <li><a href="#">МикроФид</a></li>
-            <li><a href="#">МикроФид Азот</a></li>
+            <li><a href="#">Семена подсолнечника</a></li>
+            <li><a href="#">НС Х 6012 (EXPRESS)</a></li>
         </ul>
-        <h1 class="pages-title">МикроФид Азот</h1>
+        <h1 class="pages-title">НС Х 6012 (EXPRESS)</h1>
         <div class="card-block">
             <div class="card-image-block">
-                <a href="images/microfid1.png" data-fancybox="gallery"><img src="images/microfid1.png" alt=""></a>
+                <a href="images/НСХ6012.png" data-fancybox="gallery"><img src="images/НСХ6012.png" alt=""></a>
             </div>
             <div class="card-property">
-                <div class="property-description">
-                    <span class="text-bold">МикроФид Азот</span> – это высококачественное жидкое комплексное
-                    органо-минеральное удобрение с повышенным
-                    содержанием азота в доступной для растений органической форме. Специальный разработанный состав
-                    макро-, мезо- и микроэлементов с повышенным содержанием Азота (20%) в амидной форме, являющейся
-                    наиболее оптимальной для листовых подкормок, так как молекулы азота в данной форме целиком попадают
-                    в лист, что предотвращает накопление сопутствующих ионов на поверхности листа, вызывающих ожоги на
-                    растении. Препараты данной марки позволяют снижать дозы внесения дорогостоящих азотных минеральных
-                    удобрений, а при обработках культур в поздние фазы вегетации повышают качество конечной продукции.
+                <div class="table-property-row table-property-row-green">
+                    <div class="table-property-item">
+                        <img src="images/icon-date.png" alt=""> <span>Ранний гибрид</span>
+                    </div>
+                    <div class="table-property-item">
+                        <img src="images/icon-date2.png" alt=""> <span>Генетический потенциал
+                            урожайности семян</span>
+                    </div>
+                    <div class="table-property-item">
+                        <img src="images/icon-date3.png" alt=""> <span>Рекомендуемая
+                            густота стояния</span>
+                    </div>
                 </div>
-                <div class="property-description">
-                    <span class="text-bold">МАССОВАЯ ДОЛЯ, НЕ МЕНЕЕ:</span>
+                <div class="table-property-row">
+                    <div class="table-property-item">
+                        103-105 дней
+                    </div>
+                    <div class="table-property-item">
+                        До 55 ц/га
+                    </div>
+                    <div class="table-property-item">
+                        55.000 - 60.000 растений на гектар
+                    </div>
                 </div>
-                <table class="table-property">
-                    <tbody>
-                        <tr>
-                            <th>N</th>
-                            <th>P</th>
-                            <th>K</th>
-                            <th>SO<sub>3</sub></th>
-                            <th>Mg</th>
-                            <th>B</th>
-                            <th>Cu</th>
-                            <th>Mn</th>
-                            <th>Zn</th>
-                            <th>Si</th>
-                            <th>Органические
-                                вещества</th>
-                            <th>pH</th>
-                            <th>ρ</th>
-                        </tr>
-                        <tr>
-                            <td>260</td>
-                            <td>3,0</td>
-                            <td>1,5</td>
-                            <td>60</td>
-                            <td>0,5</td>
-                            <td>0,5</td>
-                            <td>0,5</td>
-                            <td>0,2</td>
-                            <td>0,2</td>
-                            <td>5,6</td>
-                            <td>5 - 10</td>
-                            <td colspan="1" rowspan="2">4,5</td>
-                            <td>1,12</td>
-                        </tr>
-                        <tr>
-                            <td>г/л</td>
-                            <td>г/л</td>
-                            <td>г/л</td>
-                            <td>г/л</td>
-                            <td>г/л</td>
-                            <td>г/л</td>
-                            <td>г/л</td>
-                            <td>г/л</td>
-                            <td>г/л</td>
-                            <td>г/л</td>
-                            <td>г/л</td>
-                            <td>г/л</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div class="property-description">
-                    <span class="text-bold">ПРЕИМУЩЕСТВА ПРИМЕНЕНИЯ:</span>
+                <div class="table-property-row table-property-row-green">
+                    <div class="table-property-item">
+                        <img src="images/icon-date4.png" alt=""> <span>Устойчивость к
+                            гербицидам</span>
+                    </div>
+                    <div class="table-property-item">
+                        <img src="images/icon-date5.png" alt=""> <span>Устойчивость
+                            к засухе</span>
+                    </div>
+                    <div class="table-property-item">
+                        <img src="images/icon-date6.png" alt=""> <span>Содержание масла
+                            в семенах</span>
+                    </div>
                 </div>
-                <div class="property-description">
-                    <ul>
-                        <li>Устраняет дефицит азота в растении</li>
-                        <li>Усиливает фотосинтез и увеличивает вегетативную массу культуры</li>
-                        <li>Ускоряет миграцию питательных элементов в растении</li>
-                        <li>Повышает устойчивость к неблагоприятным погодным условиям</li>
-                        <li>Увеличивает урожайность и качественные показатели</li>
-                    </ul>
+                <div class="table-property-row">
+                    <div class="table-property-item">
+                        В оптимальных агроэкологических условиях
+                        170-180 см
+                    </div>
+                    <div class="table-property-item">
+                        Обладает высокой засухоустойчивостью и отличается наивысшей
+                        степенью опыления.
+                    </div>
+                    <div class="table-property-item">
+                        49-52 %
+                    </div>
                 </div>
-                <div class="property-description">
-                    <span class="text-bold">РЕКОМЕНДАЦИИ ПО ПРИМЕНЕНИЮ:</span>
+                <div class="table-property-row table-property-row-green">
+                    <div class="table-property-item">
+                        <img src="images/icon-date7.png" alt=""> <span>Устойчивость к
+                            гербицидам</span>
+                    </div>
+                    <div class="table-property-item">
+                        <img src="images/icon-date8.png" alt=""> <span>Устойчивость
+                            к болезням</span>
+                    </div>
+                    <div class="table-property-item">
+                        <img src="images/icon-date9.png" alt=""> <span>Описание</span>
+                    </div>
                 </div>
-                <table class="table-property">
-                    <tbody>
-                        <tr class="dark-green-table">
-                            <td colspan="3">Листовые вегетативные обработки</td>
-                        </tr>
-                        <tr class="dark-green-table">
-                            <td>Культура</td>
-                            <td>Дозировка,
-                                л/га</td>
-                            <td>Кратность и время обработок</td>
-                        </tr>
-                        <tr>
-                            <td>Зерновые озимые и яровые</td>
-                            <td>1 л/тн
-                                1,0-1,5 л/га</td>
-                            <td>Предпосевная обработка семян (использование в баковой смеси на 10 л воды с фунгицидными
-                                и инсектицидными протравителями)
-                                1-я обработка в фазе кущения и выхода в трубку</td>
-                        </tr>
-                        <tr class="green-table-lane">
-                            <td>Бобовые</td>
-                            <td>1,0</td>
-                            <td>1 обработка в фазу стеблевания</td>
-                        </tr>
-                        <tr>
-                            <td>Свекла сахарная,
-                                столовая и кормовая</td>
-                            <td>1,5-2,0<br>
-                                1,5</td>
-                            <td>1-я обработка в фазе 2-4 пары листьев<br>
-                                2-я обработка в фазе 8-10 листьев</td>
-                        </tr>
-                        <tr class="green-table-lane">
-                            <td>Подсолнечник,
-                                кукуруза</td>
-                            <td>0,1-1,5<br>
-                                1,0-1,5</td>
-                            <td>1-я обработка в фазе 2-4 пары листьев ил 4-6 листьев<br>
-                                2-я обработка в фазе перед цветением</td>
-                        </tr>
-                        <tr>
-                            <td>Рапс яровой и озимый</td>
-                            <td>1,0-1,5<br>
-                                1,0-1,5</td>
-                            <td>1-я обработка в фазе образования розетки<br>
-                                2-я обработка в фазе начала цветения</td>
-                        </tr>
-                        <tr class="green-table-lane">
-                            <td>Картофель</td>
-                            <td>1,0<br>
-                                1,0-1,5<br>
-                                1,0-1,5</td>
-                            <td>При посадке, на дно борозды/полные всходы<br>
-                                1-я обработка в фазе развития листьев 1-го – 2-го порядка<br>
-                                2-я обработка в фазе закладки цветов на побегах 2-го и 3-го порядка</td>
-                        </tr>
-                        <tr>
-                            <td>Бахчевые</td>
-                            <td>1,0-2,2<br>
-                                1,0-2,2</td>
-                            <td>1-я обработка перед цветением<br>
-                                2-я обработка через 12-15 дней</td>
-                        </tr>
-                        <tr class="green-table-lane">
-                            <td>Хлопок, лён</td>
-                            <td>1,0<br>
-                                1,0</td>
-                            <td>1-я обработка перед цветением<br>
-                                2-я обработка через 10-12 дней</td>
-                        </tr>
-                        <tr>
-                            <td>Овощные культуры</td>
-                            <td>0,4-0,6<br>
-                                0,4-0,6<br>
-                                0,4-0,6</td>
-                            <td>1-я обработка в первой половине вегетации<br>
-                                2-я обработка через 10-12 дней<br>
-                                3-я обработка в фазе формирования и развития</td>
-                        </tr>
-                        <tr class="green-table-lane">
-                            <td>Яблоня, груша</td>
-                            <td>1,5-2,0<br>
-                                2,0-2,5</td>
-                            <td>1-я обработка перед цветением<br>
-                                2-я обработка в фазе окончания цветения</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="table-property-row">
+                    <div class="table-property-item">
+                        Гибрид подсолнечника
+                        НС Х 6012 толерантен к
+                        гербицидам группы трибенурон-метил, получен
+                        конвенциональным методом селекции.
+                    </div>
+                    <div class="table-property-item">
+                        Высокотолерантен к фомопсису
+                        (Phomopsis Helianthi), пепельной
+                        гнили (Macrophomina), белой гнили
+                        (Sclerotinia sclerotiorum). Содержит ген
+                        устойчивости к расам А, B, C, D, Е,
+                        F, G заразихи (Orobanche Cumana).
+                        Высокая сопротивляемость к болезням и стрессовым условиям вы-
+                        ращивания. Генетически устойчив к
+                        ложно-мучнистой росе (Plasmopara
+                        helianthi), контролируемой Pl6 геном,
+                        а также к ржавчине и подсолнечной моли.
+                    </div>
+                    <div class="table-property-item">
+                        <b>Облиственность:</b> отличная, в фазе начала бутонизации листьев полностью закрывает почву<br>
+                        <b>Стебель:</b> средней толщины, устойчивый к полеганию<br>
+                        <b>Корневая система:</b> мощная, разветвленная, позволяет использовать почвенную влагу с глубины
+                        до 2,5 м<br>
+                        <b>Корзинка:</b> тонкая, выпуклой формы,
+                        полуповернута вниз, диаметр 23-25 см,
+                        выполненность – 100%<br>
+                        <b>Семянка:</b> черного цвета, удлиненная,
+                        масса 1000 шт. – 65-70 г
+                    </div>
+                </div>
             </div>
         </div>
         <div class="text-center">
