--- a/gk-agrobusiness.html
+++ b/gk-agrobusiness.html
@@ -135,7 +135,7 @@
     </div>
     <section class="container">
         <h2>О компании</h2>
-        <div class="about-company-text">
+        <div class="main-about-company-text">
             <p>ООО «ГК АГРОБИЗНЕС» - это сельскохозяйственный комплекс современного уровня, специализирующийся на
                 производстве семян подсолнечника, кукурузы и сои сербской селекции и производстве жидких комплексных
                 органо-минеральных удобрений с микроэлементами для листовой подкормки.</p>
