--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
                     <span class="pages__href">category.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="card.html" target="_blank">
-                    <span class="pages__name">Карточка товара</span>
+                    <span class="pages__name">Карточка товара (МикроФид)</span>
                     <span class="pages__href">card.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="card2.html" target="_blank">
+                    <span class="pages__name">Карточка товара (Подсолнечник)</span>
+                    <span class="pages__href">card2.html</span>
                 </a>
             </li>
             <li class="pages__item pages__item_orange">
